--- a/.github/workflows/sort-validate.yml
+++ b/.github/workflows/sort-validate.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0   # ✅ needed for committing changes back
-          ref: main  # checkout the latest branch tip, not the triggering commit
+          ref: ${{ github.sha }}  # Checkout the commit that triggered the workflow
 
       # 2️⃣ Setup Python
       - name: Setup Python
@@ -120,18 +120,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          # Ensure we are on latest main
-          git fetch origin
-          git checkout main
-
-          # Stash workflow changes temporarily
-          git stash push -m "workflow auto-validation"
-
-          git pull --rebase origin main  # ✅ puts workflow commit on top of latest main
-          
-          # Apply workflow changes back
-          git stash pop
 
           git add data/subjects/*/terms.json glossary/*.md
 
