--- a/.github/workflows/sort-validate.yml
+++ b/.github/workflows/sort-validate.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0   # ✅ needed for committing changes back
-          ref: ${{ github.sha }}  # Checkout the commit that triggered the workflow
+          ref: main
 
       # 2️⃣ Setup Python
       - name: Setup Python
